# huff-rs

./: .gitignore  .gitmodules  Cargo.toml  Dockerfile  README.md  Tasks.md  clippy.toml  foundry.toml  test.huff
.github/: PULL_REQUEST_TEMPLATE.md
.github/scripts/: create-tag.js  move-tag.js  prune-prereleases.js
.github/workflows/: build-wasm.yml  build.yaml  ci.yaml  docker-publish.yaml  lints.yaml  release.yaml  tests.yaml
assets/: huffc.excalidraw
cli/: Cargo.toml  README.md
cli/huffs/: nonhufffile.sol
cli/src/: huffr.rs  main.rs  rhuff.rs
codegen/: Cargo.toml
codegen/src/: lib.rs
huff_assert/: Cargo.toml
huff_assert/src/: errors.rs  lib.rs  runner.rs  stack.rs  utils.rs
huff_assert/tests/: lexer.rs  runner.rs
huff_cli/: Cargo.toml  README.md
huff_cli/huffs/: test.huff
huff_cli/src/: huff.rs  huffc.rs  huffr.rs  main.rs
huff_cli/tests/: compiling.rs
huff_codegen/: Cargo.toml  README.md
huff_codegen/examples/: ERC20.huff
huff_codegen/examples/utilities/: Address.huff  HashMap.huff  Utils.huff
huff_codegen/src/: lib.rs  tests.rs
huff_codegen/src/irgen/: arg_calls.rs  constants.rs  immutables.rs  mod.rs  statements.rs
huff_codegen/tests/: abigen.rs  churn.rs  constructor_args.rs
huff_core/: Cargo.toml  README.md
huff_core/benches/: huff_benchmark.rs
huff_core/src/: cache.rs  lib.rs
huff_core/tests/: aliased_imports.rs  alternative_constructor_macro.rs  alternative_main_macro.rs  breaking_jumptable.rs  builtins.rs  circular_nested_builtins.rs  codegen_errors.rs  compiling.rs  erc20.rs  erc721.rs  errors.rs  exports.rs  exports_events.rs  file_resolution.rs  free_storage_pointer.rs  functions.rs  gen_artifact.rs  in_memory.rs  macro_invoc_args.rs  outlined_macros.rs  parser_errors.rs  push_overrides.rs  recurse_bytecode.rs  recurse_deps.rs  sources.rs  test_circular_constructor.rs  tests.rs  verbatim.rs
huff_js/: Cargo.toml  README.md
huff_js/scripts/: make_packages.sh
huff_js/src/: lib.rs
huff_lexer/: Cargo.toml  README.md
huff_lexer/examples/: ERC20.huff
huff_lexer/examples/utilities/: Ownable.huff
huff_lexer/huffs/: ERC20.huff
huff_lexer/src/: lexer.rs  lib.rs  tests.rs
huff_lexer/tests/: arg_calls.rs  builtins.rs  comments.rs  context.rs  decorators.rs  eof.rs  erc20.rs  evm_types.rs  fsp.rs  function_type.rs  hex.rs  hexes.rs  imports.rs  jumps.rs  keywords.rs  labels.rs  lex.rs  macros.rs  numbers.rs  opcodes.rs  padded.rs  symbols.rs  tables.rs
huff_parse/: Cargo.toml
huff_parse/src/: lib.rs
huff_parse/tests/: macro.rs
huff_parser/: Cargo.toml  README.md
huff_parser/src/: lib.rs
huff_parser/tests/: abi.rs  breaking_param_invocation.rs  common.rs  constant.rs  error.rs  event.rs  function.rs  imports.rs  labels.rs  macro.rs  opcodes.rs  padded.rs  storage_pointer_derivation.rs  table.rs
huff_tests/: Cargo.toml  README.md
huff_tests/src/: cheats.rs  errors.rs  inspector.rs  lib.rs  report.rs  runner.rs  types.rs
huff_tests/src/inspectors/: cheats_inspector.rs  log_inspector.rs  mod.rs
huff_tests/tests/: runner.rs
huff_utils/: Cargo.toml  README.md
huff_utils/src/: abi.rs  artifact.rs  ast.rs  bytecode.rs  bytes_util.rs  config.rs  error.rs  evm.rs  evm_version.rs  file_provider.rs  files.rs  foundry.rs  io.rs  lib.rs  remapper.rs  report.rs  sol_interface.rs  span.rs  time.rs  token.rs  types.rs  wasm.rs
huff_utils/tests/: abi.rs  bytes.rs  files.rs  remappings.txt
huffr_cli/: Cargo.toml
huffr_lexer/: Cargo.toml
huffr_lexer/src/: lib.rs
huffr_utils/: Cargo.toml
huffr_utils/src/: evm.rs  token.rs
huffup/: README.md  huffup  install
lexer/: Cargo.toml
lexer/src/: lib.rs  tests.rs
parser/: Cargo.toml
parser/src/: lib.rs
rhuff_cli/: Cargo.toml  README.md
rhuff_cli/huffs/: nonhufffile.sol
rhuff_cli/src/: rhuff.rs
rhuff_lexer/: Cargo.toml
rhuff_lexer/src/: lib.rs
rhuff_utils/src/: error.rs  lib.rs  report.rs  span.rs  token.rs
utils/: Cargo.toml
utils/src/: ast.rs  error.rs  evm.rs  io.rs  lib.rs  token.rs
