[package]
name = "cli"
version = "0.1.0"
edition = "2021"
authors = ["Andreas Bigger"]
readme = "README.md"
repository = "https://github.com/huff-language/huff-rs/"
description = """
Efficient Huff compiler written in rust.
"""
keywords = ["huff", "lang", "rust", "ethereum", "assembly", "compiler"]
exclude = [ "huffs" ]

[dependencies]
clap = { version = "3.1.18", features = ["derive"] }
lexer = { path = "../lexer" }
utils = { path = "../utils" }

[[bin]]
name = "huffr"
path = "src/huffr.rs"
doc = false