[package]
name = "codegen"
version = "0.1.0"
edition = "2021"
authors = ["Andreas Bigger"]
readme = "README.md"
repository = "https://github.com/huff-language/huff-rs/"
description = """
Code Generation Crate for the Huff-Language
"""
keywords = ["huff", "lang", "rust", "ethereum", "assembly", "compiler"]

[dependencies]
serde_json = "1.0.81"
proptest = "1.0.0"
utils = { path = "../utils" }