[package]
name = "huff_assert"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
revm = "2.0.0"
huff_utils = {path="../huff_utils"}
huff_tests = {path="../huff_tests"}
huff_codegen = {path="../huff_codegen"}
huff_lexer = {path="../huff_lexer"}
huff_parser = {path="../huff_parser"}
ethers = "0.13.0"
bytes = "1.2.1"
tracing = "0.1.36"
