[package]
name = "huff_cli"
version = "0.1.0"
edition = "2021"
authors = ["Andreas Bigger", "clabby", "exp.table"]
readme = "README.md"
repository = "https://github.com/huff-language/huff-rs/"
license = "MIT OR Apache-2.0"
description = """
Efficient Huff compiler written in rust.
"""
keywords = ["huff", "rust", "evm", "bytecode", "compiler"]

[dependencies]
clap = { version = "3.1.18", features = ["derive"] }
huff_core = { path = "../huff_core", version = "0.x.x" }
huff_utils = { path = "../huff_utils", version = "0.x.x" }
tracing = "0.1.34"
ethers-core = "0.13.0"
yansi = "0.5.1"
spinners = "4.1.0"
uuid = { version = "1.1.1", features = ["v4"] }

[[bin]]
name = "huffc"
path = "src/huffc.rs"
doc = false