[package]
name = "huff_codegen"
version = "0.3.0"
edition = "2021"
authors = ["asnared", "clabby", "exp.table"]
readme = "README.md"
repository = "https://github.com/huff-language/huff-rs/"
license = "MIT OR Apache-2.0"
description = """
Bytecode Generation Crate for the Huff-Language
"""
keywords = ["huff", "rust", "ethereum", "bytecode", "compiler"]

[dependencies]
serde_json = "1.0.81"
proptest = "1.0.0"
huff_utils = { path = "../huff_utils" }
ethers-core = "1.0.2"
hex = "0.4.3"
tracing = "0.1.34"
uuid = { version = "1.1.1", features = ["v4"] }
regex = "1.6.0"