[package]
name = "huff_core"
version = "0.1.0"
edition = "2021"
authors = ["Andreas Bigger"]
readme = "README.md"
repository = "https://github.com/huff-language/huff-rs/"
description = """
Core Compiler Crate for the Huff-Language
"""
keywords = ["huff", "lang", "rust", "evm", "bytecode", "compiler"]

[dependencies]
serde_json = "1.0.81"
proptest = "1.0.0"
ethers = "0.6.2"
tracing = "0.1.34"
huff_codegen = { path = "../huff_codegen" }
huff_lexer = { path = "../huff_lexer" }
huff_utils = { path = "../huff_utils" }
huff_parser = { path = "../huff_parser" }
rayon = { version = "1.5.3" }
tracing-subscriber = { version = "0.3", default-features = false, features = ["env-filter", "fmt"] }
uuid = "1.1.1"

[features]
verbose = []