[package]
name = "huff_core"
version = "0.3.0"
edition = "2021"
authors = ["asnared", "clabby", "exp.table"]
readme = "README.md"
repository = "https://github.com/huff-language/huff-rs/"
license = "MIT OR Apache-2.0"
description = """
Core Compiler Crate for the Huff-Language
"""
keywords = ["huff", "rust", "evm", "bytecode", "compiler"]

[dependencies]
serde_json = "1.0.81"
proptest = "1.0.0"
ethers-core = "0.13.0"
tracing = "0.1.34"
huff_codegen = { path = "../huff_codegen" }
huff_lexer = { path = "../huff_lexer" }
huff_utils = { path = "../huff_utils" }
huff_parser = { path = "../huff_parser" }
rayon = { version = "1.5.3" }
tracing-subscriber = { version = "0.3", default-features = false, features = ["env-filter", "fmt"] }
uuid = { version = "1.1.1", features = ["v4"] }
tracing-test = "0.2.2"
walkdir = "2"

[dev-dependencies]
criterion = "0.3.5"
rand = "0.8.5"

[[bench]]
name = "huff_benchmark"
harness = false

[features]
verbose = []