[package]
name = "huffc-js"
version = "0.3.2"
authors = ["refcell", "clabby", "exp.table", "kanewallmann"]
edition = "2021"
readme = "README.md"
repository = "https://github.com/huff-language/huff-rs/"
license = "MIT OR Apache-2.0"
description = """
Wasm Core Compiler Crate for the Huff-Language
"""
keywords = ["huff", "rust", "evm", "bytecode", "compiler"]

[lib]
crate-type = ["cdylib"]

[dependencies]
serde_json = "1.0.81"
huff_utils = { path = "../huff_utils" }
huff_core = { path = "../huff_core" }
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.4"
wasm-bindgen = "0.2"
