[package]
name = "huff_lexer"
version = "0.3.2"
edition = "2021"
authors = ["refcell", "clabby", "exp.table", "maddiaa"]
readme = "README.md"
repository = "https://github.com/huff-language/huff-rs/"
license = "MIT OR Apache-2.0"
description = """
Lexical Analysis Crate for the Huff-Language
"""
keywords = ["huff", "rust", "evm", "bytecode", "compiler"]

[dependencies]
huff_utils = { path = "../huff_utils", version = "0.3.1" }
regex = "1"
tracing = "0.1.34"
