[package]
name = "huff_parser"
version = "0.1.0"
edition = "2021"
authors = ["Andreas Bigger"]
readme = "README.md"
repository = "https://github.com/huff-language/huff-rs/"
description = """
Parser Crate for the Huff-Language
"""
keywords = ["huff", "lang", "rust", "ethereum", "bytecode", "compiler"]
exclude = [ "huffs" ]

[dependencies]
huff_utils = { path = "../huff_utils" }
huff_lexer = { path = "../huff_lexer" }
proptest = "1.0.0"
tiny-keccak = { version = "2.0.2", features = ["keccak"] }
bytes = "1"