[package]
name = "huff_parser"
version = "0.3.0"
edition = "2021"
authors = ["asnared", "clabby", "exp.table"]
readme = "README.md"
repository = "https://github.com/huff-language/huff-rs/"
license = "MIT OR Apache-2.0"
description = """
Parser Crate for the Huff-Language
"""
keywords = ["huff", "rust", "evm", "bytecode", "compiler"]

[dependencies]
huff_utils = { path = "../huff_utils" }
huff_lexer = { path = "../huff_lexer" }
proptest = "1.0.0"
tracing = "0.1.34"
hex = "0.4.3"
regex = "1.6.0"