[package]
name = "huff_parser"
version = "0.3.2"
edition = "2021"
authors = ["refcell", "clabby", "exp.table", "maddiaa"]
readme = "README.md"
repository = "https://github.com/huff-language/huff-rs/"
license = "MIT OR Apache-2.0"
description = """
Parser Crate for the Huff-Language
"""
keywords = ["huff", "rust", "evm", "bytecode", "compiler"]

[dependencies]
huff_utils = { path = "../huff_utils" }
huff_lexer = { path = "../huff_lexer" }
tracing = "0.1.34"
hex = "0.4.3"
regex = "1.6.0"
