[package]
name = "huff_utils"
version = "0.1.0"
edition = "2021"
authors = ["Andreas Bigger", "clabby", "exp.table"]
readme = "README.md"
repository = "https://github.com/huff-language/huff-rs/"
license = "MIT OR Apache-2.0"
description = """
Lexical Analysis Crate for the Huff-Language
"""
keywords = ["huff", "rust", "evm", "bytecode", "compiler"]

[dependencies]
serde = { version = "1.0.137", features = [ "derive" ] }
serde_json = "1.0.81"
strum = "0.24"
strum_macros = "0.24"
codemap-diagnostic = "0.1.1"
phf = { version = "0.10", features = ["macros"] }
regex = "1"
lazy_static = "1"
tracing = "0.1.34"
uuid = { version = "1.1.1", features = ["v4"] }
pathdiff = "0.2.1"
ethers = "0.6.2"
itertools = "0.10.3"
