[package]
name = "huff_utils"
version = "0.3.1"
edition = "2021"
authors = ["refcell", "clabby", "exp.table", "maddiaa"]
readme = "README.md"
repository = "https://github.com/huff-language/huff-rs/"
license = "MIT OR Apache-2.0"
description = """
Lexical Analysis Crate for the Huff-Language
"""
keywords = ["huff", "rust", "evm", "bytecode", "compiler"]

[dependencies]
serde = { version = "1.0.137", features = [ "derive", "rc" ] }
serde_json = "1.0.81"
strum = "0.24"
strum_macros = "0.24"
codemap-diagnostic = "0.1.1"
phf = { version = "0.10", features = ["macros"] }
regex = "1"
lazy_static = "1"
uuid = { version = "1.1.1", features = ["v4"] }
pathdiff = "0.2.1"
ethers-core = "1.0.2"
itertools = "0.10.3"
tiny-keccak = { version = "2.0.2", features = ["keccak"] }
toml = "0.5.9"
tracing = "0.1.34"
tracing-subscriber = { version = "0.3", default-features = false, features = ["env-filter", "fmt"] }
cfg-if = "1"

[target.'cfg(all(target_arch = "wasm32", target_os = "unknown"))'.dependencies]
js-sys = { version = "0.3" }
